Flat logo in background information pages

--- a/po/nb.po
+++ b/po/nb.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: solydxk-welcome\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-18 17:48+0100\n"
-"PO-Revision-Date: 2016-01-15 14:21+0000\n"
+"POT-Creation-Date: 2016-01-24 19:12+0100\n"
+"PO-Revision-Date: 2016-01-19 16:46+0000\n"
 "Last-Translator: Anders Dalen <anders@andersdalen.no>\n"
 "Language-Team: Norwegian Bokmål (http://www.transifex.com/solydxk/solydxk-"
 "welcome/language/nb/)\n"
@@ -150,8 +150,8 @@ msgid ""
 "principles to ensure balanced books and accurate reports."
 msgstr ""
 "Utformet for å være enkel å bruke, men likevel kraftig og fleksibel, GnuCash "
-"kan hjelpe deg å holde orden på bankkontoer, aksjer, inntekter og kostnader. "
-"Så rask og intuitiv å bruke som et sjekkhefteregister, det basert på "
+"kan hjelpe deg å holde orden på bankkonti, aksjer, inntekter og kostnader. "
+"Så rask og intuitiv å bruke som et sjekkhefteregister. Det er basert på "
 "profesjonelle prinsipper for å sikre balanserte bøker og nøyaktige rapporter."
 
 #: en/business.html+html.body.div.div.table.tr.td:28
@@ -580,7 +580,7 @@ msgid ""
 "and image authoring."
 msgstr ""
 "GIMP er et akronym for GNU Image Manipulation Program. Det er et fritt "
-"distribuer program for oppgaver som fotoretusjering, billedkomposisjon og "
+"distribuert program for oppgaver som fotoretusjering, billedkomposisjon og "
 "billedredigering."
 
 #: en/home.html+html.body.div.div.table.tr.td.p:25
@@ -589,7 +589,7 @@ msgid ""
 "expert quality photo retouching program, an online batch processing system, "
 "a mass production image renderer, an image format converter, etc."
 msgstr ""
-"Det har mange funksjoner. Den kan brukes som en enkel tegneprogram, et "
+"Det har mange funksjoner. Den kan brukes som et enkelt tegneprogram, et "
 "kvalitets fotoretusjering program for eksperter, et online satsvis "
 "behandlingssystem, masseproduksjons billedrendering, et "
 "billedkonverteringsprogram, osv."
@@ -642,8 +642,7 @@ msgstr "Shotwell / Digikam"
 msgid ""
 "Shotwell is an image organizer designed to provide personal photo management."
 msgstr ""
-"Shotwell er en billedorganiserer utformet for å gi deg personlig foto "
-"styring."
+"Shotwell er en billedorganiserer utformet for å gi deg personlig fotostyring."
 
 #: en/home.html+html.body.div.div.table.tr.td.p:46
 msgid ""
@@ -681,7 +680,7 @@ msgid ""
 "Homepage Digikamm: <a href=\"https://www.digikam.org/\" target=\"_blank"
 "\">https://www.digikam.org</a>"
 msgstr ""
-"Hjemmeside Digikamm: <a href=\"https://www.digikam.org/\" target=\"_blank"
+"Hjemmeside Digikam: <a href=\"https://www.digikam.org/\" target=\"_blank"
 "\">https://www.digikam.org</a>"
 
 #: en/home.html+html.body.div.div.table.tr.td:57
@@ -830,7 +829,7 @@ msgid ""
 "of a cross-platform back-end."
 msgstr ""
 "Transmission er en BitTorrent-klient som har et enkelt grensesnitt på toppen "
-"av en kryssplattforms-bakstykke."
+"av et kryssplattforms-bakstykke."
 
 #: en/home.html+html.body.div.div.table.tr.td.p:110
 msgid ""
@@ -894,7 +893,7 @@ msgid ""
 "repository, you introduce a greater risk of breakage doing so."
 msgstr ""
 "Selv om du kan kjøre mer oppdatert programvare ved å bruke arkivet for "
-"tilbakeporteringer vil få en større risiko for at noe slutter å virke."
+"tilbakeporteringer vil det være en større risiko for at noe slutter å virke."
 
 #: en/libreoffice.html+html.body.div.div.table.tr.td:30
 msgid ""
@@ -1006,7 +1005,7 @@ msgid ""
 "partitions. With GParted you can resize, copy, and move partitions without "
 "data loss."
 msgstr ""
-"GParted er et fri partisjonredigerer for å kunne administrere partisjoner i "
+"GParted er en fri partisjonredigerer for å kunne administrere partisjoner i "
 "et grafisk miljø. Med GParted kan du endre størrelse, kopiere og flytte "
 "partisjoner uten å miste data."
 
@@ -1033,7 +1032,7 @@ msgstr ""
 "VirtualBox er en almenn full virtualiserer for x86 maskinvare, rettet mot "
 "server, desktop og innebygget bruk. VirtualBox-pakken installeres på et "
 "eksisterende vertsoperativsystem som et program; dette vertsprogrammet "
-"tillater flere gjesteoperativsystemer, hvert kjent som en gjesteOS, å starte "
+"tillater flere gjesteoperativsystemer, hvert kjent som et gjesteOS, å starte "
 "og kjøre i hvert sitt egne virtuelle miljø."
 
 #: en/system.html+html.body.div.div.table.tr.td:38
@@ -1054,7 +1053,7 @@ msgid ""
 "client with lots of useful features and an intuitive graphical user "
 "interface."
 msgstr ""
-"FileZilla Client er en rask og pålitelig multiplattform FTP, FTPS og SFTP-"
+"FileZilla Client er en rask og pålitelig multiplattforms FTP, FTPS og SFTP-"
 "klient med masse nyttige funksjoner og et intuitivt grafisk "
 "brukergrensesnitt."
 
@@ -1081,7 +1080,7 @@ msgid ""
 "stable to ensure the greatest stability and security."
 msgstr ""
 "SolydXK er et operativsystem, basert på åpen kildekode, for bedrifter, "
-"organisasjoner og hjemmebrukere. Både SolydXK og SolydxK er basert på Debian "
+"organisasjoner og hjemmebrukere. Både SolydX og SolydK er basert på Debian "
 "stable for å sikre størst mulig stabilitet og sikkerhet."
 
 #: en/welcome.html+html.body.div.div.p.table.tr.td.p:18
@@ -1219,7 +1218,7 @@ msgid ""
 msgstr ""
 "SolydXK kommer med et bredt utvalg av programvare. Likevel, hvis du ikke "
 "finner riktig programvare i vårt depot og du må bruke MS Windows-"
-"programvare, kan du installere det ved hjelp av PlayOnLinux. Ikke alle "
+"programvare, kan du installere det ved hjelp av PlayOnLinux. Ikke all "
 "programvare kan kjøres på denne måten, men et stort antall programmer er "
 "allerede støttet."
 
