--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solydxk-welcome (1.2.0) solydxk; urgency=low
+
+  * Flat logo in background information pages
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Fri, 21 Jan 2016 08:00:00 +0100
+
 solydxk-welcome (1.1.7) solydxk; urgency=low
 
   * Updated translations
