--- a/po/nb.po
+++ b/po/nb.po
@@ -4,13 +4,14 @@
 #
 # Translators:
 # Anders Dalen <anders@andersdalen.no>, 2016
+# Arjen Balfoort <schoelje@solydxk.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: solydxk-welcome\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-31 22:31+0100\n"
-"PO-Revision-Date: 2016-01-19 16:46+0000\n"
-"Last-Translator: Anders Dalen <anders@andersdalen.no>\n"
+"POT-Creation-Date: 2016-03-07 07:33+0100\n"
+"PO-Revision-Date: 2016-03-07 06:31+0000\n"
+"Last-Translator: Arjen Balfoort <schoelje@solydxk.com>\n"
 "Language-Team: Norwegian Bokmål (http://www.transifex.com/solydxk/solydxk-"
 "welcome/language/nb/)\n"
 "Language: nb\n"
@@ -395,16 +396,16 @@ msgstr "0 A.D."
 
 #: en/games.html+html.body.div.div.table.tr.td.p:50
 msgid ""
-"0 A.D. (pronounced “zero-ey-dee”) is a free, open-source, historical Real "
+"0 A.D. (pronounced \"zero-ey-dee\") is a free, open-source, historical Real "
 "Time Strategy (RTS) game currently under development by Wildfire Games, a "
 "global group of volunteer game developers. As the leader of an ancient "
 "civilization, you must gather the resources you need to raise a military "
 "force and dominate your enemies."
 msgstr ""
-"0 A.D. (uttalt “zero-ey-dee”) er et fritt, historisk sanntids strategispill, "
-"baser på åpen kildekode, som utvikles av Wildfire Games, en internasjonal "
-"gruppe av frivillige spill-utviklere. Som leder av en eldgammel "
-"sivilisasjon, må du samle de ressursene du trenger for å bygge en "
+"0 A.D. (uttalt \"zero-ey-dee\") er et fritt, historisk sanntids "
+"strategispill, baser på åpen kildekode, som utvikles av Wildfire Games, en "
+"internasjonal gruppe av frivillige spill-utviklere. Som leder av en "
+"eldgammel sivilisasjon, må du samle de ressursene du trenger for å bygge en "
 "militærstyrke og nedkjempe dine fiender."
 
 #: en/games.html+html.body.div.div.table.tr.td:52
