--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+solydxk-welcome (1.2.6) solydxk; urgency=low
+
+  * Fix not starting in SolydX RPI
+
+ -- Arjen Balfoort <arjenbalfoort@solydxk.com>  Wed, 15 Jun 2016 20:35:17 +0200
+
 solydxk-welcome (1.2.5) solydxk; urgency=low
 
   * Fix install scripts for Stretch
